fix overflow-x

--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ body {
 
 body.hidden {
   overflow: hidden;
+  height: 100vh;
 }
 
 .container {
